# fdsf-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
resource/fully-conv-series/: b0.json  b1.json  b12.json  b32.json  b4.json  b52.json  b72.json
resource/integral-fd/: asympt-c.json
src/: Common.h  Main.cpp
src/volume1/: example-coefficients-fcs.cpp
volume1/: CMakeLists.txt  README.md  build.py
volume1/resource/fully-conv-series/: b2.json  b3.json  bm12.json
volume1/resource/integral-fd/: exp-c.json  fcs-c.json
volume1/src/: Common.cpp  Common.h  example-Jm12-coefficients.cpp  example-gorner.cpp
